--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -35,7 +35,7 @@
         <span>Discover</span>
       </a>
 
-      <md-divider></md-divider>
+      <md-divider class="navbar-divider"></md-divider>
 
       <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.profile">
         <i class="fa fa-user fa-lg"></i>
