No power users, only things

--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -15,7 +15,7 @@
   </header>
 
   <p class="interior">
-    Power users: Already know your device's uuid and token? <a ui-sref="material.nodewizard.manualclaim">claim your device manually.</a>
+    Already know your thing's uuid and token? <a ui-sref="material.nodewizard.manualclaim">claim your device manually.</a>
   </p>
 
   <div class="blu-loading" ng-show="loading">
