don't autofocus designer forms

--- a/public/pages/compose.html
+++ b/public/pages/compose.html
@@ -12,7 +12,7 @@
       <tr ng-repeat="keyValue in keyValues" class="compose__table-row">
         <td class="compose__table-cell">{{$index + 1}}.</td>
         <td class="compose__table-cell compose__table-cell--value">
-          <input required label="Value" ng-model="keyValue[1]" autofocus>
+          <input required label="Value" ng-model="keyValue[1]">
         </td>
         <td class="compose__table-cell compose__table-cell--value">
           <input required label="Key" ng-model="keyValue[0]">
