move the designer logo under the editor div to help prevent it from highlighting

--- a/public/angular/directives/flow/flow-editor/flow-editor.html
+++ b/public/angular/directives/flow/flow-editor/flow-editor.html
@@ -1,8 +1,17 @@
 <div draggable="true" class="flow-editor" drop="addNode($data, $event)">
+
   <svg
     class="flow-editor-workspace"
     xmlns="http://www.w3.org/2000/svg"
     version="1.1"
     pointer-events="all"
   />
+
+  <img
+    src="/assets/images/octoblu.png"
+    class="designer__octoblu-logo"
+    onmousedown="return false"
+    ng-hide="readonly"
+  />
+
 </div>
