Update breadcrumbs to show device name without and not the title

--- a/public/pages/connector/channels/detail.html
+++ b/public/pages/connector/channels/detail.html
@@ -13,7 +13,7 @@
       <div class="breadcrumbs">
         <a ui-sref="material.configure" class="breadcrumb-link">Connected Things</a>
         <i class="fa fa-angle-double-right fa-lg"></i>
-        <span class="breadcrumb-link current">Manage {{channel.name}}</span>
+        <span class="breadcrumb-link current">{{channel.name}}</span>
       </div>
     </div>
   </header>
