--- a/public/pages/device-detail.html
+++ b/public/pages/device-detail.html
@@ -14,7 +14,7 @@
       <div class="breadcrumbs">
         <a ui-sref="material.configure" class="breadcrumb-link">Connected Things</a>
         <i class="fa fa-angle-double-right fa-lg"></i>
-        <span class="breadcrumb-link current">Edit {{controller.device.name}}</span>
+        <span class="breadcrumb-link current">{{controller.device.name}}</span>
       </div>
     </div>
   </header>
