--- a/public/pages/node-wizard/add-device/index.html
+++ b/public/pages/node-wizard/add-device/index.html
@@ -4,7 +4,7 @@
       <div class="breadcrumbs">
         <a ui-sref="material.nodewizard.addnode" class="breadcrumb-link">Things</a>
         <i class="fa fa-angle-double-right fa-lg"></i>
-        <span class="breadcrumb-link current">Add {{nodeType.name}}</span>
+        <span class="breadcrumb-link current">{{nodeType.name}}</span>
       </div>
     </div>
   </header>
