--- a/public/pages/flow-inspector.html
+++ b/public/pages/flow-inspector.html
@@ -18,8 +18,8 @@
       Setup Thing
     </h2>
 
-    <button ng-click="hideSection = !hideSection" class="Sidebar-pane-collapse-button">
-    <i class="fa" ng-class="{'fa-plus': hideSection, 'fa-minus': !hideSection}"></i>
+    <button ng-click="hideSection = !hideSection" title="Toggle Pane" class="Sidebar-pane-collapse-button">
+      <i class="fa" ng-class="{'fa-plus': hideSection, 'fa-minus': !hideSection}"></i>
     </button>
   </header>
 
