it looks better than it used to

--- a/public/pages/node-wizard/add-device/index.html
+++ b/public/pages/node-wizard/add-device/index.html
@@ -11,7 +11,9 @@
 </md-content>
 
 <md-content class="node-wizard">
-  <img src="{{nodeType.logo}}" class="node-wizard__logo">
+  <div class="node-wizard-logo-container">
+    <img src="{{nodeType.logo}}">
+  </div>
   <h2 class="node-wizard__title">{{nodeType.name}}</h2>
   <div class="node-wizard__description">
     <p class="node-wizard__description--text">{{nodeType.helpText}}</p>
