--- a/public/pages/node-wizard/add-channel/index.html
+++ b/public/pages/node-wizard/add-channel/index.html
@@ -10,7 +10,9 @@
   </header>
 </md-content>
 <main class="node-wizard">
-  <img src="{{nodeType.logo}}" alt="{{nodeType.name}}" class="node-wizard__logo">
+  <div class="node-wizard-logo-container">
+    <img src="{{nodeType.logo}}" alt="{{nodeType.name}}">
+  </div>
   <h2 class="node-wizard__title">{{nodeType.name}}</h2>
   <div class="node-wizard__description">
     <p class="node-wizard__description--text" ng-show="nodeType.helpText">{{nodeType.helpText}}</p>
