added middle connect state with help text

--- a/public/pages/node-wizard/add-channel/index.html
+++ b/public/pages/node-wizard/add-channel/index.html
@@ -14,8 +14,8 @@
     <img src="{{nodeType.logo}}" alt="{{nodeType.name}}">
   </div>
   <h2 class="node-wizard__title">{{nodeType.name}}</h2>
-  <div class="node-wizard__description">
+  <!-- <div class="node-wizard__description">
     <p class="node-wizard__description--text" ng-show="nodeType.helpText">{{nodeType.helpText}}</p>
-  </div>
+  </div> -->
   <div ui-view class="node-wizard__body"></div>
 </main>
