--- a/public/pages/node-wizard/add-device/index.html
+++ b/public/pages/node-wizard/add-device/index.html
@@ -15,9 +15,9 @@
     <img src="{{nodeType.logo}}">
   </div>
   <h2 class="node-wizard__title">{{nodeType.name}}</h2>
-  <div class="node-wizard__description">
+  <!-- <div class="node-wizard__description">
     <p class="node-wizard__description--text">{{nodeType.helpText}}</p>
-  </div>
+  </div> -->
 
   <div ng-show="nodeType.name === 'Gateblu'" class="node-wizard-choice-button-container">
     <md-button ng-href="http://gateblu.octoblu.com">
