--- a/public/pages/node-wizard/add-subdevice/index.html
+++ b/public/pages/node-wizard/add-subdevice/index.html
@@ -14,9 +14,9 @@
   <img ng-src="{{nodeType.logo}}">
 </div>
 <h2 class="text-center">{{nodeType.name}}</h2>
-<div class="node-wizard__description">
+<!-- <div class="node-wizard__description">
   <p class="node-wizard__description--text" ng-show="nodeType.helpText">{{nodeType.helpText}}</p>
-</div>
+</div> -->
 
 <div class="node-wizard-gateblu-explanation">
   <p>
