--- a/public/pages/node-wizard/add-channel/oauth.html
+++ b/public/pages/node-wizard/add-channel/oauth.html
@@ -1,4 +1,11 @@
-<p class="node-wizard__copy">Activating this thing will redirect you to authorize with a third party.</p>
-<md-button ng-click="activate()" class="md-raised md-primary node-wizard__button">
-  Activate Thing
-</md-button>
+<div class="bluprint-loading-indicator" ng-show="redirectLoading">
+  <h1 class="text-center">
+    <i class="fa fa-spin fa-refresh"></i>
+  </h1>
+</div>
+<div ng-hide="redirectLoading">
+  <p class="node-wizard__copy">Activating this thing will redirect you to authorize with a third party.</p>
+  <md-button ng-click="activate()" class="md-raised md-primary node-wizard__button">
+    Activate Thing
+  </md-button>
+</div>
