--- a/public/angular/directives/flow/flow-editor/flow-editor.html
+++ b/public/angular/directives/flow/flow-editor/flow-editor.html
@@ -1,4 +1,4 @@
-<div draggable="true" class="flow-editor" drop="addNode($data, $event)">
+<div draggable="true" class="flow-editor" drop="addNode($data, $event)" ondragstart="return false">
 
   <svg
     class="flow-editor-workspace"
