--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Octoblu - Integration of Everything">
     <meta name="author" content="Octoblu, now part of Citrix">
     <meta name="theme-color" content="#14568f">
+    <meta name="IE_RM_OFF" content="true">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
