fix chrome drag

--- a/public/angular/directives/flow/flow-editor/flow-editor.html
+++ b/public/angular/directives/flow/flow-editor/flow-editor.html
@@ -3,6 +3,7 @@
   class="flow-editor"
   drop="addNode($data, $event)"
   drop-accept="'json/flow-node-type'"
+  drop-effect="copy"
   onmousedown="return false"
 >
 
