--- a/public/pages/flow-node-setup.html
+++ b/public/pages/flow-node-setup.html
@@ -1,6 +1,6 @@
 <div class="Sidebar-pane-content">
   <div class="Sidebar-flow-node-setup">
-    <img height="100" ng-src="{{nodeType.logo}}">
+    <img height="100" ng-src="{{nodeType.logo || logo}}">
     <h3 class="text-center Sidebar-setup-title">This thing requires setup</h3>
     <p class="text-center">
       Click Setup to start configuring this thing
