--- a/public/pages/sidebar.html
+++ b/public/pages/sidebar.html
@@ -1,4 +1,7 @@
-<div data-ng-init="expandedState=true" ng-class="{'sidebar--is-expanded': expandedState}" class="sidebar">
+<div
+  data-ng-init="expandedState=true"
+  ng-class="{'sidebar--is-expanded': expandedState}"
+  class="sidebar">
   <flow-inspector flow="flow"></flow-inspector>
   <utility-inspector flow="flow" debug="debug"></utility-inspector>
 </div>
