--- a/public/pages/node-wizard/add-subdevice/select-gateblu.html
+++ b/public/pages/node-wizard/add-subdevice/select-gateblu.html
@@ -18,7 +18,7 @@
   </div>
 </div>
 
-<div class="gateblu-download">
+<div ng-hide="gateblus.length" class="gateblu-download">
   <p>
     Haven't setup a Gateblu yet? <br>
   </p>
