--- a/public/pages/node-wizard/add.html
+++ b/public/pages/node-wizard/add.html
@@ -19,7 +19,7 @@
       <p class="node-wizard__description--text">{{nodeType.helpText}}</p>
     </div>
 
-    <div class="blu-bordered-button" ng-click="controller.connectThings(nodeType)">
+    <div class="blu-bordered-button node-wizard__connect--btn" ng-click="controller.connectThings()">
         CONNECT
     </div>
   </div>
