connect button shows thing name

--- a/public/pages/node-wizard/add.html
+++ b/public/pages/node-wizard/add.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="blu-bordered-button node-wizard__connect--btn" ng-click="controller.connectThings()">
-        CONNECT
+        CONNECT {{nodeType.name}}
     </div>
   </div>
 </md-content>
