added connect to breadcrumbs

--- a/public/pages/node-wizard/add-subdevice/index.html
+++ b/public/pages/node-wizard/add-subdevice/index.html
@@ -4,7 +4,7 @@
       <div class="breadcrumbs">
         <a ui-sref="material.nodewizard.addnode" class="breadcrumb-link">Things</a>
         <i class="fa fa-angle-double-right fa-lg"></i>
-        <span class="breadcrumb-link current">{{nodeType.name}}</span>
+        <span class="breadcrumb-link current">Connect {{nodeType.name}}</span>
       </div>
     </div>
   </header>
@@ -14,9 +14,6 @@
   <img ng-src="{{nodeType.logo}}">
 </div>
 <h2 class="text-center">{{nodeType.name}}</h2>
-<!-- <div class="node-wizard__description">
-  <p class="node-wizard__description--text" ng-show="nodeType.helpText">{{nodeType.helpText}}</p>
-</div> -->
 
 <div class="node-wizard-gateblu-explanation">
   <p>
