--- a/public/angular/directives/utility-inspector/utility-inspector.html
+++ b/public/angular/directives/utility-inspector/utility-inspector.html
@@ -42,14 +42,17 @@
         No matches for "{{thingNameFilter}}"
       </h3>
       <div ng-repeat="category in categories">
-        <header class="blu-bordered-header">
-          <h4 class="blu-bordered-header-label">
+        <header class="category-header">
+          <h4>
             {{category}}
           </h4>
-          <hr class="blu-bordered-header-divider">
+          <button ng-click="showCategory = !showCategory" class="Sidebar-button" aria-label="Show/Hide Nodes in Category">
+            <span ng-show="showCategory">Hide</span>
+            <span ng-show="!showCategory">Show</span>
+          </button>
         </header>
-
         <node-collection
+          ng-show="showCategory"
           flow="flow"
           nodes="thingsByCategory[category]"
           view-style="collectionViewStyle">
